2002-03-04  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* commands.h (cmd_set_comment) : new
	* commands.c (cmd_set_comment_apply, set_comment_undo, 
	  cmd_set_comment_redo, cmd_set_comment_finalize, cmd_set_comment) :
	  new

2002-03-04  Morten Welinder  <terra@diku.dk>

	* src/mathfunc.c (dexp): Add give_log arg and use R's version.
	All callers changed.

	* src/analysis-tools.c (destroy_data_set_list): Plug leak.

2002-03-04  Jody Goldberg <jody@gnome.org>

	* src/sheet.c (sheet_cell_insert) : make it clear that this routine
	  does not link the expression or register the dependencies.
	(sheet_cell_remove_from_hash) : document state changes and use
	  dependend_unlink.
	(cb_remove_allcells) : cell_destroy will unlink.
	(cb_collect_cell) : be clear that the results are unlinked.
	(colrow_move) : some docs.
	(sheet_move_range) : simplify now that the collected cells are
	  unlinked rather than just having their depends dropped.

	* src/eval.c (cell_add_dependencies) : delete.
	(cell_drop_dependencies) : delete.

	* src/style.c (style_font_new_simple) : If we can't find a font check
	  a map to see if we know of something similar.
	(get_substitute_font) : moved here from the XL importer.

2002-03-03  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* src/commands.c (cmd_rename_sheet,...) : now a wrapper around 
	  cmd_reorganize_sheets.
	(cmd_reorganize_sheets_apply) : moved into workbook.c as
	  workbook_sheet_reorganize
	(cmd_reorganize_sheets,...) : implement sheet renaming
	* src/commands.h : add an argument to cmd_rename_sheet
	* src/workbook-control-gui.c (cb_sheet_label_changed) : 
	  change invocation of cmd_rename_sheet
	* src/workbook.c (workbook_sheet_rename) replaced by
	  workbook_sheet_reorganize
	* src/workbook.h: ditto

2002-03-02  Jody Goldberg <jody@gnome.org>

	* src/eval.c (handle_tree_deps) : Use hooks for per dependent
	  link/unlink for each function.

2002-03-02  Jody Goldberg <jody@gnome.org>

	* src/global-gnome-font.c : Use string chunk.
